# file_reverse

./: CMakeLists.txt  README.md  file_reader.cpp  file_reader.h  file_reverse.cpp  file_reverse.h  file_reverse_utility.cpp  main.cpp  types_consts.h
test/: gtest-all.cc  gtest.h  reverse_file_test.cpp
